--- a/main.css
+++ b/main.css
@@ -50,10 +50,11 @@ form {
 .search-label {
     padding: 8px;
     font-weight: lighter;
-    font-size: 25px;
+    font-size: 28px;
     text-align: center;
     height: auto;
     width: 280x;
+    margin-bottom: 35px;
 }
 #recipe-search-label {
     color: white;
@@ -67,13 +68,15 @@ form {
     color: white;
 }
 #recipe-input {
-    margin-top: 25px;
     margin-bottom: 25px;
     width: 275px;
 }
 #quantity-input {
     margin-bottom: 25px;
     width: 275px;
+}
+#quantity-label, #keyword-label {
+    color: white;
 }
 ::placeholder {
     color: rgb(102, 182, 71);
@@ -85,6 +88,9 @@ form {
     color: rgb(102, 182, 71)
 }
 .btn {
+    font-size: 22px;
+    height: 40px;
+    width: 250px;
     border: none;
     background: none;
     padding: 5px;
@@ -121,7 +127,15 @@ form {
  }
 
 
-
+#js-error-message {
+    display: none;
+    font-weight: lighter;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    background: rgba(255, 0, 0, 0.37);
+    border-radius: 5px;
+}
 
 #error-container {
     border: 2px solid red;
@@ -143,7 +157,7 @@ form {
 }
 
 
-#recipe-results {
+.recipe-results {
     width: 100%;
     height: auto;
     display: flex;
@@ -153,14 +167,27 @@ form {
     flex-wrap: wrap;
     list-style-type: none;
 }
+#results-header {
+    font-weight: lighter;
+    color: white;
+    font-size: 35px;
+    height: auto;
+    width: 300px;
+    text-align: center;
+    margin-bottom: 35px;
+    border-bottom: 1px solid rgb(102, 182, 71);
+}
 li {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 45px;
+}
+ul {
+    padding: 0;
 }
 .recipes {
+    font-weight: lighter;
     color: white;
     margin: 40px;
     margin-bottom: 0;
@@ -183,10 +210,12 @@ li {
     border: 1px solid black;
     background-color: white;
     color: black;
-    width: 240px;
+    width: 260px;
     height: auto;
     font-size: 14px;
     font-family: 'Roboto';
+    margin-left: auto;
+    margin-right: auto;
 }
 .performance-facts__header {
     border-bottom: 10px solid black;
@@ -197,7 +226,7 @@ li {
     margin-bottom: 10px;
 }
 .performance-facts__table, .performance-facts__table--grid {
-    width: 185px;
+    width: 195px;
 }
 thead, #lkcal-val-cal {
     text-align: left;
@@ -217,7 +246,9 @@ th {
 td {
     text-align: right;
 }
-
+.amps {
+    font-size: 12px;
+}
 
 footer {
     width: 100%;
@@ -225,6 +256,7 @@ footer {
 #attribution-img {
     width: 200px;
 }
+
 
 @media (min-width: 600px) {
     .big-background {
@@ -266,7 +298,7 @@ footer {
         background: none;
     }
     .search-label {
-        font-size: 22px;
+        font-size: 35px;
         padding: 10px;
         width: 350px;
     }
