--- a/main.css
+++ b/main.css
@@ -197,8 +197,7 @@ ul {
 }
 .recipe-img {
     width: 140px;
-    border-top: 1px solid white;
-    border-bottom: 3px solid black;
+    border: 3px solid rgb(102, 182, 71);
     height: auto;
     border-radius: 100px;
 }
